<resources>
    <string name="app_name">Alarm and Doorbell Controller</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="title_activity_settings">Settings</string>

    <string name="preference_doorbell_enabled">Doorbell available</string>
    <string name="preference_category_doorbell">Camera feeds</string>
    <string name="preference_url_field_title">Camera address</string>
    <string name="preference_url_field_summary">URL of the camera</string>
    <string name="preference_username_field_title">Username</string>
    <string name="preference_password_field_title">Password</string>
    <string name="preference_home_assistant_ws_url_title">URL</string>
    <string name="preference_home_assistant_ws_url_summary">WebSocket URL</string>
    <string name="preference_home_assistant_token_title">Token</string>
    <string name="preference_home_assistant_token_summary">Token used for auth.</string>
    <string name="preference_category_home_assistant">Home Assistant</string>

    <string name="settings_video_url">video_url</string>
    <string name="settings_home_assistant_token">home_assistant_token</string>
    <string name="settings_home_assistant_ws_url">home_assistant_ws_url</string>
    <string name="settings_video_username">username</string>
    <string name="settings_video_password">password</string>

    <string name="alarm_disarm">Disarm</string>
    <string name="alarm_disarmed">Disarmed</string>
    <string name="alarm_arm">Arm</string>
    <string name="alarm_arm_home">Arm Home</string>
    <string name="alarm_armed_home">Armed Home</string>
    <string name="alarm_arm_away">Arm Away</string>
    <string name="alarm_armed_away">Armed Away</string>
    <string name="alarm_pending">Pending</string>
    <string name="alarm_arming">Arming</string>
    <string name="alarm_triggered">Triggered</string>

    <string name="menu_password">Enter PIN</string>
    <string name="menu_password_positive">Validate</string>
    <string name="menu_password_cancel">Cancel</string>
    <string name="menu_password_invalid">PIN invalid!</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>