<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/preference_category_home_assistant">
        <EditTextPreference
            app:defaultValue="ws://homeassistant.local:8123/api/websocket"
            app:key="@string/settings_home_assistant_ws_url"
            app:summary="@string/preference_home_assistant_ws_url_summary"
            app:title="@string/preference_home_assistant_ws_url_title" />
        <EditTextPreference
            app:defaultValue=""
            app:key="@string/settings_home_assistant_token"
            app:summary="@string/preference_home_assistant_token_summary"
            app:title="@string/preference_home_assistant_token_title" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Overcharge prevention" >
        <SwitchPreference
            app:defaultValue="false"
            app:key="overcharge_protection_enabled"
            app:title="Active"
            app:persistent="true"
            app:summaryOn="Will turn off charging when threshold is reached"
            app:summaryOff="Ignores battery and charging state" />
        <DropDownPreference
            app:dependency="overcharge_protection_enabled"
            app:key="overcharge_protection_entity"
            app:persistent="true"
            android:enabled="false"
            app:title="Switch Entity"
            app:summary="The entity to turn on and off" />
        <SeekBarPreference
            app:dependency="overcharge_protection_enabled"
            app:persistent="true"
            android:min="1"
            android:max="100"
            app:defaultValue="30"
            app:title="Minimum charge"
            app:summary="When should charging start"
            app:showSeekBarValue="true"
            app:key="overcharge_protection_min" />
        <SeekBarPreference
            app:dependency="overcharge_protection_enabled"
            app:persistent="true"
            android:min="1"
            android:max="100"
            app:defaultValue="99"
            app:title="Maximum charge"
            app:summary="When should charging stop"
            app:showSeekBarValue="true"
            app:key="overcharge_protection_max" />

    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="cameras"
        app:title="@string/preference_category_doorbell">

    </PreferenceCategory>
</PreferenceScreen>